# viridithas

./: .gitattributes  .gitignore  Cargo.toml  Contributors.txt  IDEAS.txt  LICENSE  Makefile  README.md  THIRD-PARTY-NOTICES.md  build.rs  compile_prof_build.sh  net.json  networkhistory.txt  nnue-speedups.md  optimise.sh  perftsuite.epd  problematic-fen.txt  pstvis.ipynb  rustfmt.toml  selfplaydatagen.sh  texelconversion.py  tuning.ipynb  wac.epd  wiki.md  zugts.epd
.github/: CONTRIBUTING.md  Contributors.txt  FUNDING.yml  LICENSE
.github/workflows/: release.yml  rust.yml
assets/epds/: arasan21.epd  hardzugs.epd  iq4.epd  wac.epd  zugts.epd
epds/: frcperftsuite.epd  hardzugs.epd  tbtest.epd  wac.epd
notes/: IDEAS.txt  networkhistory.txt
scripts/: batchtexelconversion.sh  bench-against.sh  compare_eval_histograms.py  compile-with-net.sh  customdatagen.sh  fetch-everything.txt  frc-bench-against.sh  gamecounter.py  hce-bench-against.sh  inspect-nnue.py  ltc-bench-against.sh  ltcsprt.sh  ltctest.sh  matchup.sh  mlhmodel.ipynb  mlhmodel.py  newdatagen.sh  nnueconverter.sh  nnuereanalyser.sh  optimise.sh  param-tourney-generator.py  plot_errors.py  plot_eval_histogram.py  plotter.py  regressiontest.sh  regtest.sh  run_benchmark.sh  selfplaydatagen-fixed-depth.sh  selfplaydatagen.sh  sprt-12core.sh  sprt.sh  stctest.sh  texelconversion.py  texelconversion.sh  tune-resume.sh  tune.sh  wld-model-games-gen.sh
src/: attack.rs  bench.rs  bitboard.rs  board.rs  cache.rs  chessmove.rs  cli.rs  cuckoo.rs  datagen.rs  definitions.rs  epd.rs  errors.rs  evaluation.rs  fen.rs  history.rs  historytable.rs  image.rs  isatty.rs  lookups.rs  macros.rs  magic.rs  main.rs  makemove.rs  movegen.rs  movepicker.rs  numa.rs  opt.rs  perft.rs  piece.rs  piecelist.rs  piecesquaretable.rs  pvtable.rs  rng.rs  search.rs  searchinfo.rs  squareset.rs  stack.rs  stats.rs  term.rs  texel.rs  (+9 more)
src/board/: evaluation.rs  history.rs  mod.rs  movegen.rs  sprt.sh.save  validation.rs
src/board/evaluation/: parameters.rs  score.rs
src/board/movegen/: bitboards.rs  mod.rs  movepicker.rs  piecelayout.rs
src/chess/: chessmove.rs  fen.rs  magic.rs  mod.rs  piece.rs  piecelayout.rs  quick.rs  squareset.rs  types.rs
src/chess/board/: evaluation.rs  history.rs  mod.rs  movegen.rs  san.rs  validation.rs
src/chess/board/movegen/: movepicker.rs  piecelayout.rs
src/datagen/: dataformat.rs  marlinformat.rs  valid.sfens
src/datagen/dataformat/: marlinformat.rs
src/definitions/: depth.rs
src/nnue/: accumulator.rs  convert.rs  geometry.rs  mod.rs  network.rs  simd.rs
src/nnue/geometry/: avx2.rs  neon.rs  vbmi.rs
src/nnue/network/: feature.rs  layers.rs  pawn_updates.rs  threat_updates.rs
src/numa/: bindings.rs  mod.rs
src/piecesquaretable/: sftables.rs  tables.rs
src/search/: parameters.rs  pv.rs
src/tablebases/: bindings.rs  ffi.rs  mod.rs  probe.rs
src/uci/: fmt.rs
src/util/: depth.rs
tuning/: config.json  engines.json  log.txt  searchtune.sh
