[package]
name = "viridithas"
version = "20.0.0"
edition = "2024"
description = "A superhuman chess engine."
license = "MIT"
readme = "README.md"
keywords = ["chess", "treesearch"]
categories = ["games"]
repository = "https://github.com/cosmobobak/viridithas"
authors = ["Cosmo Bobak (cosmobobak@gmail.com)"]
rust-version = "1.93.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
syzygy = ["dep:cc"]
bindgen = ["dep:bindgen"]
tuning = []
stats = ["dep:linkme"]
nnz-counts = []
datagen = [
    "dep:serde",
    "dep:toml",
    "dep:rand",
    "dep:num_cpus",
    "dep:chrono",
    "dep:ctrlc",
    "dep:bulletformat",
]
zstd = ["dep:zstd"]
final-release = ["zstd", "bindgen", "syzygy"]
ft-record = []

[build-dependencies]
cc = { version = "1.2.6", optional = true }
bindgen = { version = "0.72.1", optional = true }

[dependencies]
# datagen dependencies
rand = { version = "0.9.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.9.7", optional = true }
num_cpus = { version = "1.16.0", optional = true }
chrono = { version = "0.4.35", optional = true }
ctrlc = { version = "3.4.4", optional = true }
bulletformat = { version = "1.2.0", optional = true }

# stats dependencies
linkme = { version = "0.3", optional = true }

# general dependencies
clap = { version = "4.5.3", features = ["derive"] }
arrayvec = "0.7.4"
anyhow = "1.0.86"
thiserror = "2.0.17"
ruzstd = "0.8.1"

# full-fat zstd for release builds
zstd = { version = "0.13.2", optional = true }

# for sharing network weights between processes
memmap2 = "0.9.5"

# for deconflicting shared weights
fxhash = "0.2.1"

# what it says on the tin
term_size = "0.3.2"
vec1 = "1.12.1"

# for coloured terminal output
[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
# debug = true
